# JEDI_9910_Fengyun_FY280

./: .gitignore  CMakeLists.txt  CMakeLists_sdk.txt  release_note.txt  release_sdk.cmd
core/: CMakeLists.txt  av_sync.c  av_sync.h  core_interface.c  core_interface.h  crc.c  crc.h  grabber_control.h  hdmi_loop_through.c  hdmi_loop_through.h  hook_helper.h  mem_mgr.c  mem_mgr.h  mps_cmdq.c  mps_cmdq.h  mps_control.c  mps_control.h  mps_system.c  mps_system.h  msg_core.h  msg_route.c  msg_route.h  psi_si_table_mgr.c  psi_si_table_mgr.h  queue_mgr.c  queue_mgr.h  rom_parser.c  rom_parser.h  storage_mgr.c  storage_mgr.h  task_audio_in.c  task_audio_in.h  task_avi_mux.c  task_avi_mux.h  task_stream_mux.c  task_stream_mux.h  task_video_encoder.c  task_video_encoder.h  task_video_encoder_m.c  ts_mux.c  (+4 more)
core/mencoder/: CMakeLists.txt  config.h  mencoder.c  mencoder.h
core/mencoder/cache/: cache_file.c  cache_file.h
core/mencoder/libavformat/: avio.h  movenc.c  movenc.h
core/mencoder/stream/: stream.c  stream.h  stream_file.c
data/edid/: Hauppauge_9910.hex
freertos/: CMakeLists.txt  toolchain.cmake
freertos/include/freertos/: FreeRTOS.h  FreeRTOSConfig.h  StackMacros.h  croutine.h  list.h  mpu_wrappers.h  portable.h  portmacro.h  projdefs.h  queue.h  semphr.h  task.h  timer.h
freertos/include/newlib/: mtrace.h
freertos/include/or32/: crc32.h  debug.h  driver.h  engine.h  i2s.h  isr.h  mmio.h  or32.h  or32_host.h  or32_uart.h  proj_defs.h  spr_defs.h  sys.h  ticktimer.h
freertos/src/freertos/: CMakeLists.txt  croutine.c  heap_4.c  list.c  port.c  (+3 more)
freertos/src/malloc/: CMakeLists.txt  _malloc.h  calloc.c  malign.c  malloc.c  mallocr.c  msize.c  mstats.c  mtrim.c  realloc.c  valloc.c
freertos/src/newlib/: CMakeLists.txt  close.c  execve.c  fork.c  fstat.c  getpid.c  isatty.c  kill.c  link.c  lseek.c  mtrace.c  open.c  read.c  sbrk.c  stat.c  times.c  unlink.c  wait.c  write.c
freertos/src/pal/: CMakeLists.txt  config.h  error.c  event.c  file.c  heap.c  init.c  init.h  msgq.c  mutex.c  print.c  rand.c  stat.c  string.c  sys.c  thread.c  timer.c
project/: CMakeLists.txt
project/hw_grabber/: CMakeLists.txt  add2line.cmd  config.c  config.h  copy_audio_codec.cmd  def.cmake  freertos-config.cmd  freertos-config_280.cmd  freertos-setting.cmd  freertos.cmd  gpio_key_led_map.c  gpio_key_led_map.h  it_hw_grabber.cpp  it_usbd_pcgrabber.cpp  it_usbd_property_hw_grabber.cpp  it_usbd_property_hw_grabber.h  jp2.cmd  main.c  msg.h  run.cmd  run_update_rom.cmd  version.cmd  win32-config.cmd
project/hw_grabber_bootloader/: CMakeLists.txt  add2line.cmd  config.c  config.h  crc32.c  crc32.h  decompress.c  decompress.h  def.cmake  freertos-config.cmd  freertos.cmd  global.h  it_hw_grabber.cpp  it_usbd_pcgrabber.cpp  it_usbd_property_hw_grabber.cpp  it_usbd_property_hw_grabber.h  main.c  main_freertos.c  main_win32.c  run.cmd
project/update_nor/: CMakeLists.txt  add2line.cmd  def.cmake  freertos-config.cmd  freertos.cmd  gdb.cmd  jp2.cmd  main.c  main_freertos.c  run.cmd  win32.cmd
sdk/: CMakeLists.txt
sdk/codecs/: CMakeLists.txt  codec_crt0.c  codecs.lds
sdk/codecs/aacencode/: CMakeLists.txt  aac-enc.c  aac_rom.c  aacenc_core.c  adj_thr.c  basic_op.h  basicop2.c  config.h  ms_stereo.c  oper_32b.c  plugin.h  psy_configuration.c  resample.h  resample2.c  sf_estim.c  tns.c  voAudio.h
sdk/codecs/mp2encode/: CMakeLists.txt  config.h  main.c  plugin.h  resample.h
sdk/driver/adv7180/: CMakeLists.txt  adv7180.c  mmp_adv7180.c
sdk/driver/aud/: CMakeLists.txt  audio.c  codecs.c
sdk/driver/capture/: CMakeLists.txt  cap_util.c  capture.c  capture_hw.c  device_sensor.c  device_video.c  mmp_capture.c
sdk/driver/capture/IT9913_128LQFP/: io_video.c
sdk/driver/capture/IT9917_176TQFP/: io_sensor_aptina_mt9m034.c  io_sensor_pixelplus_ph1100k.c  io_video.c
sdk/driver/capture/IT9919_144TQFP/: io_sensor_ipasion_ip2986.c  io_video.c
sdk/driver/cat9883/: CMakeLists.txt  cat9883_adc.c  cat9883_mcu.c  mmp_cat9883.c
sdk/driver/decompress/: CMakeLists.txt  mmp_decompress.c
sdk/driver/dma/: CMakeLists.txt  dma.c  dma_hw.c  mmp_dma.c
sdk/driver/dpu/: CMakeLists.txt  mmp_dpu.c
sdk/driver/encoder/: CMakeLists.txt  encoder_bitstream.c  encoder_hardware.c  encoder_memory.c  mmp_encoder.c
sdk/driver/exrtc/: CMakeLists.txt  mmp_exrtc.c
sdk/driver/hdmirx/: CMakeLists.txt  mmp_hdmirx.c
sdk/driver/hdmirx/it6604/: io.c  it6604.c  mmp_it6604.c  timerprocess.c
sdk/driver/hdmirx/it6607/: io.c  it6607.c  mmp_it6607.c  timerprocess.c
sdk/driver/hdmitx/: CMakeLists.txt  mmp_hdmitx.c
sdk/driver/hdmitx/IT66121/: hdmitx_drv.c  hdmitx_sys.c
sdk/driver/hdmitx/IT6613/: hdmitx_drv.c  hdmitx_sys.c
sdk/driver/iic/: CMakeLists.txt  iic.c
sdk/driver/intr/: CMakeLists.txt  intr.c
sdk/driver/ir/: CMakeLists.txt  mmp_ir.c
sdk/driver/isp/: CMakeLists.txt  dllmain.c  isp.c  isp_hw.c  isp_util.c  mmp_isp.c
sdk/driver/mmp/: CMakeLists.txt  ahb.c  clock.c  dllmain.c  gpio.c  host.c  host_clock.c  mem.c  sys.c
sdk/driver/modulator/: CMakeLists.txt  mod_ctrl.c  mod_ctrl.h
sdk/driver/modulator/IT9507/: IQ_fixed_table.h  IT9507.cpp  IT9507.h  eagleTuner.cpp  eagleTuner.h  modulatorError.h  modulatorFirmware.h  modulatorRegister.h  modulatorType.h  modulatorUser.cpp  modulatorUser.h  modulatorVersion.h
sdk/driver/modulator/usb_mod/: usb_mod.c  usb_mod.h  usb_mod_cfg.h  usb_mod_transport.c  usb_mod_transport.h
sdk/driver/msc/: CMakeLists.txt  mmp_msc.c  protocol.c  scsi.c  transport.c  usb.c
sdk/driver/rtc/: CMakeLists.txt  mmp_rtc.c
sdk/driver/sd/: CMakeLists.txt  common.c  mmc.c  mmp_sd.c  sd.c  sd_hw.c
sdk/include/: mmp.h  mmp_adv7180.h  mmp_assert.h  mmp_aud.h  mmp_capture.h  mmp_cat9883.h  mmp_decompress.h  mmp_dma.h  mmp_dpu.h  mmp_encoder.h  mmp_exrtc.h  mmp_file.h  mmp_hdmirx.h  mmp_hdmitx.h  mmp_i2s.h  mmp_iic.h  mmp_intr.h  mmp_ir.h  mmp_isp.h  mmp_modulator.h  mmp_msc.h  mmp_nor.h  mmp_rtc.h  mmp_sd.h  mmp_sensor.h  mmp_spdif.h  mmp_spi.h  mmp_timer.h  mmp_tsi.h  mmp_tso.h  mmp_types.h  mmp_uart.h  mmp_usbex.h  mmp_util.h  mmp_watchdog.h
win32/: CMakeLists.txt  def.cmake
(+385 files in other folders)
