INCLUDE_DIRECTORIES(
    ${SMEDIA_INC_DIRS}
    )

IF(${SMEDIA_PLATFORM} STREQUAL win32)
    ADD_DEFINITIONS(
        -DADV7180_EXPORTS
        )

ENDIF(${SMEDIA_PLATFORM} STREQUAL win32)

ADD_LIBRARY(adv7180
    adv7180.c
    mmp_adv7180.c
    )

TARGET_LINK_LIBRARIES(adv7180
	pal
	iic
	)
	
IF(${SMEDIA_PLATFORM} STREQUAL win32)
    TARGET_LINK_LIBRARIES(adv7180
        mmp
        )

ENDIF(${SMEDIA_PLATFORM} STREQUAL win32)