INCLUDE_DIRECTORIES(
    ${SMEDIA_INC_DIRS}
)

IF(${SMEDIA_PLATFORM} STREQUAL win32)
    ADD_DEFINITIONS(
        -DRTC_EXPORTS
    )
ENDIF()

ADD_LIBRARY(exrtc
    mmp_exrtc.c
)

IF(${SMEDIA_PLATFORM} STREQUAL win32)
    TARGET_LINK_LIBRARIES(exrtc
        mmp
    )
ENDIF(${SMEDIA_PLATFORM} STREQUAL win32)
