INCLUDE_DIRECTORIES(
    ${SMEDIA_INC_DIRS}
    )

IF(${SMEDIA_PLATFORM} STREQUAL win32)
    ADD_DEFINITIONS(
    )
ENDIF(${SMEDIA_PLATFORM} STREQUAL win32)

ADD_LIBRARY(intr STATIC
    intr.c
    )

IF(${SMEDIA_PLATFORM} STREQUAL win32 OR ${SMEDIA_PLATFORM} STREQUAL freertos)
    TARGET_LINK_LIBRARIES(intr
        mmp
        )
ENDIF(${SMEDIA_PLATFORM} STREQUAL win32 OR ${SMEDIA_PLATFORM} STREQUAL freertos)